# example

./: .buildinfo  .coverage  cosmology.py  genindex.html  mycosmo.constants.html  pyproject.toml  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  mycosmo.constants.doctree  mycosmo.cosmology.doctree  mycosmo.doctree
.github/workflows/: cd.yml  ci.yml
_modules/: index.html
_modules/mycosmo/: cosmology.html
docs/source/: conf.py
mycosmo/: constants.py  cosmology.py
